# image_sorter

./: README.md  pyproject.toml
NOTES/: 2023-01-07.md  2023-01-08.md
NOTES/windows/: launch.json
imgsrt/: default_settings.py  main.py  main_app.py  main_window.py  settings.py
imgsrt/cli/: getfs.py  mnt_all_drives.sh  test_db.json
