[tool.poetry]
name = "image-sorter"
version = "0.1.0"
description = ""
authors = ["Anthony Leotta <tony@leotta.com>"]
readme = "README.md"
packages = [{include = "image_sorter"}]

[tool.poetry.dependencies]
python = "3.10.5"
pyside6 = "^6.4.1"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autopep8 = "^2.0.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
